# audio-sample-reader

./: Cargo.toml  README.md
src/: buffer.rs  lib.rs  reader.rs  refactor.rs  sample_reader.rs
src/buffer/: mono.rs  stereo.rs  utils.rs
src/reader/: error.rs  full_reader.rs  prepare.rs
src/sample_reader/: prepare.rs  reader.rs
tests/: buffer_test.rs  full_reader_test.rs
tests/common/: mod.rs
