[package]
authors = ["Virghileanu Teodor <teo.virghi@gmail.com>"]
description = "An utility library to load sounds"
edition = "2021"
homepage = "https://github.com/GaussianWonder"
name = "audio_reader"
version = "0.0.1"

[dependencies]
rubato = "0.14.0"
symphonia = {version = "0.5.3", features = ["all"]}

[dev-dependencies]
hound = "3.5.0"
